--- a/templates/sales/add_sell.html
+++ b/templates/sales/add_sell.html
@@ -16,9 +16,8 @@
             
             <div class="row">
                 <div class="col-md-8">
-                    <button type="submit" class="btn btn-secondary btn-block btn-lg"><i class="fas fa-database"></i>
-                        Submit</button>
-                        <button type="submit" class="btn btn-secondary btn-block btn-lg"><i class="fas fa-database"></i><a href="{% url 'product_list' %}"></a>Submit</a>
+                   
+                        <button type="submit" class="btn btn-secondary btn-block btn-lg"><i class="fas fa-database"></i><a href="{% url 'sales' %}"></a>Submit</a>
                         </button>
                 </div>
                 <div class="col-md-4">
