--- a/templates/dashboards/dashboard_stock.html
+++ b/templates/dashboards/dashboard_stock.html
@@ -33,17 +33,17 @@
                           <span class="report-title">PRODUCTS</span>
                           <h4>{{ total_product_stock}}</h4>
                         </div>
-                        <div class="inner-card-icon bg-secondary">
-                          <i class="fas fa-boxes"></i>
-                        </div>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/package.svg" height="62" width="62" alt="">
+                         </div>
                       </div>
                       <div class="col-md-2  report-inner-card">
                         <div class="inner-card-text">
                           <span class="report-title">PURCHASE</span>
                           <h4>{{ total_purchase_stock }}</h4>
                         </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="fas fa-credit-card"></i>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/buy.svg" height="62" width="62" alt="">
                         </div>
                       </div>
                       <div class="col-md-2  report-inner-card">
@@ -51,8 +51,8 @@
                           <span class="report-title">CLIENTS</span>
                           <h4>{{total_client_stock}}</h4>
                         </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="fas fa-users"></i>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/clients.svg" height="62" width="62" alt="">
                         </div>
                       </div>
                       <div class="col-md-2 report-inner-card">
@@ -60,8 +60,8 @@
                           <span class="report-title">SUPPLIERS</span>
                           <h4>{{ total_supplier_stock}}</h4>
                         </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="fas fa-user-friends"></i>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/suppliers.svg" height="62" width="62" alt="">
                         </div>
                       </div>
 
@@ -70,9 +70,9 @@
                           <span class="report-title">SALES</span>
                           <h4>{{ total_sales_stock}}</h4>
                         </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="far fa-money-bill-alt"></i>
-                        </div>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/money.svg" height="62" width="62" alt="">
+                         </div>
                     
                       </div>
                     </div>
