--- a/templates/dashboards/dashboard_accountant.html
+++ b/templates/dashboards/dashboard_accountant.html
@@ -28,17 +28,17 @@
                           <span class="report-title">PRODUCTS</span>
                           <h4>{{total_product_acc}}</h4>
                         </div>
-                        <div class="inner-card-icon bg-secondary">
-                          <i class="fas fa-boxes"></i>
-                        </div>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/package.svg" height="62" width="62" alt="">
+                         </div>
                       </div>
                       <div class="col-md-2  report-inner-card">
                         <div class="inner-card-text">
                           <span class="report-title">PURCHASE</span>
                           <h4>{{total_purchase_acc}}</h4>
                         </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="fas fa-credit-card"></i>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/buy.svg" height="62" width="62" alt="">
                         </div>
                       </div>
                       <div class="col-md-2  report-inner-card">
@@ -46,8 +46,8 @@
                           <span class="report-title">CLIENTS</span>
                           <h4>{{total_client_acc}}</h4>
                         </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="fas fa-users"></i>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/clients.svg" height="62" width="62" alt="">
                         </div>
                       </div>
                       <div class="col-md-2 report-inner-card">
@@ -57,8 +57,8 @@
                           <h4>{{total_supplier_acc}}</h4>
 
                         </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="fas fa-user-friends"></i>
+                        <div class="inner-card-icon">
+                          <img src="/static/images/suppliers.svg" height="62" width="62" alt="">
                         </div>
                       </div>
 
@@ -68,13 +68,10 @@
 
                           <h4>{{total_sales_acc}}</h4>
                         </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="far fa-money-bill-alt"></i>
-
-                        </div>
-                        <div class="inner-card-icon  bg-secondary">
-                          <i class="far fa-money-bill-alt"></i>
-                        </div>                    
+                        <div class="inner-card-icon">
+                          <img src="/static/images/money.svg" height="62" width="62" alt="">
+                         </div>
+                                        
                       </div>
                     </div>
                   </div>
