create password body

--- a/templates/email/passwordemail.html
+++ b/templates/email/passwordemail.html
@@ -1,6 +1,5 @@
 <p>Hello {{name}},</p>
-<p>Welcome to Pawame, where we deliver more than just energy!</p>
-<p>You are now in our Pawame Intranet Portal where official organisation communication is made.</p>
+<p>Welcome to Teste Afrigue System</p>
 <p>Your password is {{password}} </p>
 <p>Regards,</p>
-<p>Pawame Management.</p>
+<p>Teste Afrigue Management.</p>
