--- a/templates/materials/use_materials.html
+++ b/templates/materials/use_materials.html
@@ -9,7 +9,7 @@
        <hr class="my-4">
         <form action="" enctype="multipart/form-data" method="post" autocomplete="off">
             {% csrf_token %}
-            {{form.usematerial_name | as_crispy_field }}
+            {{form.material | as_crispy_field }}
             {{form.quantity | as_crispy_field  }}
           
             <div class="row">
