--- a/templates/materials/materials.html
+++ b/templates/materials/materials.html
@@ -5,6 +5,16 @@
 
 <div class="container">
     <hr class="my-4">
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags}} alert-dismissible fade show text-center " role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+    </div>
+    {% endfor %}
+     {% endif %}
   <h1 class="">Materials</h1>
   <hr class="my-4">
     <div class="row">
