--- a/templates/materials/materials.html
+++ b/templates/materials/materials.html
@@ -78,6 +78,27 @@
                         {% endfor %}
                     </tbody>
                 </table>
+<h2>
+  Used Materials
+</h2>
+                <table class="table table-hover">
+                  <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Quantity</th>
+                                            <th>Date</th>
+                                        </tr>
+                                    </thead>    
+                                    <tbody>
+                                      {% for used_material in used_materials%}
+                                            <tr>
+                                                <td>{{used_material}}</td>
+                                                <td>{{used_material.quantity}}</td>
+                                                <td>{{used_material.date}}</td>
+                                            </tr>
+                                      {% endfor %}
+                                    </tbody>
+                                </table>
             
             </div>
         </div>
