--- a/templates/materials/use_materials.html
+++ b/templates/materials/use_materials.html
@@ -18,8 +18,8 @@
                         Submit</button>
                 </div>
                 <div class="col-md-4">
-                    <a href="{% url 'all_materials' %}" class="btn btn-secondary btn-block btn-lg">
-                        <i class="fas fa-arrow-alt-circle-left">Back </i> 
+                    <a href="{% url 'used_materials' %}" class="btn btn-secondary btn-block btn-lg">
+                        <i class="fas fa-arrow-alt-circle-left">View used items</i> 
                     </a>
                 </div>
             </div>
