--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -55,11 +55,11 @@
           <ul class="nav flex-column sub-menu">
             {% if request.user.is_manager or  request.user.is_staff %}
             <li class="nav-item">
-              <a href="{% url 'product:add_product' %}">Add Product</a>
+              <a href="{% url 'add_product' %}">Add Product</a>
             </li>
             {% endif %}
             <li class="nav-item">
-              <a href="{% url 'product:product_list' %}">Manage Product</a>
+              <a href="{% url 'product_list' %}">Manage Product</a>
             </li>
           </ul>
         </div> 
@@ -82,7 +82,7 @@
           </ul>
         </div>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#ui-basic4" aria-expanded="false" aria-controls="ui-basic4">
           <span class="menu-title">Sales</span>
           <i class='fa fa-money menu-icon'></i>
@@ -98,7 +98,7 @@
             </li>
           </ul>
         </div>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link" data-toggle="collapse" href="#ui-basic7" aria-expanded="false" aria-controls="ui-basic7">
           <span class="menu-title">Supplier</span>
